<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newpassword"
    android:orientation="vertical"
    android:background="@color/cream">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/newpassword"
    android:textColor="@color/Green"
    android:textSize="20dp"
    android:textStyle="bold"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="5dp"/>
    <EditText
        android:id="@+id/etnewpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textColor="@color/black"
        android:hint="@string/newpasswordhint"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"/>
    <EditText
        android:id="@+id/etconfirmnew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textColor="@color/black"
        android:hint="@string/confirm_password"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btndone"
        android:textColor="@color/black"
        android:text="Done"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="120dp"/>

</LinearLayout>