<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical"
    android:background="@color/cream">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Radio_Button"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rdmale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Male"
            android:textSize="18sp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="30dp"/>
        <RadioButton
            android:id="@+id/rdfemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FeMale"
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Others."
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="3dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Specify your Character/Gender"
            android:textStyle="italic"
            android:visibility="gone"/>
    </RadioGroup>


</LinearLayout>